# go_amd_smi

./: License.txt  README.md  goamdsmi.go
goamdsmi_shim/: CMakeLists.txt  amd_smi.cmake  goamdsmi_shim64Config.h  goamdsmi_shim64Config.in
goamdsmi_shim/amdsmi/: CMakeLists.txt  amdsmi_go_shim.c  amdsmi_go_shim.h
goamdsmi_shim/esmi/: CMakeLists.txt  esmi_go_shim.c  esmi_go_shim.h
goamdsmi_shim/goamdsmi/: CMakeLists.txt  goamdsmi_shim.c  goamdsmi_shim.h
goamdsmi_shim/rsmi/: CMakeLists.txt  rocm_smi_go_shim.c  rocm_smi_go_shim.h
